force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/sf_devops__Vcs_Synch_State__c.object-meta.xml
<CustomObject>
    <label>Vcs Synch State</label>
    <nameField>
        <displayFormat>VSS-{000000}</displayFormat>
        <label>Vcs Synch State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vcs Synch States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>