force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/fields/sf_devops__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Retry_Count__c</fullName>
    <description>The number of times this synchronization was retried because of an error.</description>
    <label>Retry Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>