force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/fields/sf_devops__Synch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Synch_Job_Id__c</fullName>
    <description>The Apex Scheduled Job ID that is currently synchronizing this.</description>
    <label>Synch Job Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>