force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/fields/sf_devops__Synch_Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Synch_Name__c</fullName>
    <description>The name of this Synch State, used for logging.</description>
    <label>Synch Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>