force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/fields/sf_devops__Synch_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Synch_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The status of the current synch operation.</description>
    <label>Synch Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Vcs Synch States</relationshipLabel>
    <relationshipName>Vcs_Synch_States</relationshipName>
    <type>Lookup</type>
</CustomField>