force-app/main/default/objects/sf_devops__Vcs_Synch_State__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Synch_Name__c</columns>
    <columns>sf_devops__Synch_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>